0030998: STEPCAFControl_Writer will not export shape with Identity Location if there are other partner shapes with diff Location.

Fix + 2 Draw tests.